style: fix subtask drag placeholder covering screen

--- a/TodoList.Web/src/app/features/todos/todo-detail/todo-detail.component.css
+++ b/TodoList.Web/src/app/features/todos/todo-detail/todo-detail.component.css
@@ -35,12 +35,6 @@
   border: 2px dashed var(--surface-border);
   min-height: 56px;
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
 }
 
 .cdk-drop-list-dragging .cdk-drag:not(.cdk-drag-placeholder) {
